// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form panel test 1`] = `
<div>
  <div />
  <div>
    <form
      action="#"
    />
  </div>
</div>
`;

exports[`table panel test 1`] = `
<div>
  <div />
  <div>
    <table />
  </div>
</div>
`;
